--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <h1>Match-3 Game</h1>
+  <!-- Score and level status -->
   <p>
     Level: <span id="level">1</span> &nbsp;|&nbsp;
-    Score: <span id="score">0</span> / Target:
-    <span id="target-score">50</span> &nbsp;|&nbsp;
-    Moves Remaining: <span id="moves">30</span>
+    Score: <span id="score">0</span> / Target: <span id="target-score">50</span>
   </p>
+  <!-- Game board -->
   <div id="board"></div>
   <p id="status"></p>
   <script src="script.js"></script>
